--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "clsx": "^2.1.1",
     "next": "16.0.3",
+    "next-intl": "^3.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
