--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,12 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "clsx": "^2.1.1",
-    "next": "16.0.3",
-    "next-intl": "^3.0.0",
+    "mammoth": "^1.11.0",
+    "next": "15.1.6",
+    "next-intl": "^3.26.5",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
@@ -30,12 +31,12 @@
     "@storybook/nextjs-vite": "^10.0.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@vitest/browser-playwright": "^4.0.9",
     "@vitest/coverage-v8": "^4.0.9",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "15.1.6",
     "eslint-plugin-storybook": "^10.0.7",
     "playwright": "^1.56.1",
     "storybook": "^10.0.7",
